fix start.bat/sh